netbench/pattern_match/pcre_parser/pcre.output
Terminals unused in grammar

   CHARCLASS2VALUE


State 100 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce, 3 reduce/reduce
State 148 conflicts: 1 shift/reduce
State 225 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 228 conflicts: 3 reduce/reduce


Grammar

    0 $accept: pcre $end

    1 pcre: modif_front pattern modif_rear

    2 modif_front: pcre_delim
    3            | modif_front_ext pcre_delim

    4 modif_front_ext: modif_front_unit
    5                | modif_front_unit modif_front_ext

    6 modif_front_unit: UTF8
    7                 | UCP

    8 modif_rear: pcre_delim
    9           | pcre_delim modif_rear_ext

   10 modif_rear_ext: modif_rear_unit
   11               | modif_rear_unit modif_rear_ext

   12 modif_rear_unit: MODIF_CASELESS
   13                | MODIF_MULTILINE
   14                | MODIF_DOTALL
   15                | MODIF_EXTENDED
   16                | MODIF_UNGREEDY
   17                | MODIF_R
   18                | MODIF_O
   19                | MODIF_P
   20                | MODIF_B

   21 pcre_delim: SLASH

   22 pattern: newlinespec inslash
   23        | inslash

   24 inslash: rv
   25        | bol rv
   26        | rv eol
   27        | bol rv eol

   28 rv: ext_exp
   29   | rv or rv
   30   | or rv
   31   | rv or

   32 ext_exp: exp
   33        | bol exp
   34        | exp eol
   35        | bol exp eol

   36 bol: BOL

   37 eol: EOL

   38 exp: ext_unit
   39    | ext_unit exp

   40 ext_unit: unit
   41         | quantify_unit

   42 quantify_unit: unit quantify

   43 quantify: quantifier
   44         | quantifier possessive
   45         | quantifier lazy

   46 quantifier: ZEROMORE
   47           | ZEROONE
   48           | ONEMORE
   49           | repeating

   50 possessive: ONEMORE

   51 lazy: ZEROONE

   52 or: OR

   53 unit: element
   54     | capturing
   55     | option
   56     | chal
   57     | class

   58 option: optionStart option_set optionEnd
   59       | optionStart option_unset_group optionEnd
   60       | optionStart option_set option_unset_group optionEnd

   61 optionStart: OPTION

   62 optionEnd: RBRA

   63 option_unset_group: dash option_unset

   64 option_set: option_set_unit
   65           | option_set_unit option_set

   66 option_set_unit: MODIF_CASELESS
   67                | MODIF_DOTALL
   68                | MODIF_EXTENDED
   69                | MODIF_MULTILINE
   70                | MODIF_DUPNAMES
   71                | MODIF_UNGREEDY

   72 option_unset: option_unset_unit
   73             | option_unset_unit option_unset

   74 option_unset_unit: MODIF_CASELESS
   75                  | MODIF_DOTALL
   76                  | MODIF_EXTENDED
   77                  | MODIF_MULTILINE
   78                  | MODIF_DUPNAMES
   79                  | MODIF_UNGREEDY

   80 element: ASCII
   81        | ANY
   82        | SPACE
   83        | hex
   84        | TAB
   85        | CR
   86        | LF
   87        | FF
   88        | BEL
   89        | ESC
   90        | CONTROLX
   91        | BSR
   92        | RESET
   93        | assertions
   94        | ONEBYTE
   95        | OCTAL
   96        | backreference
   97        | subroutine

   98 assertions: WORDBOUNDARY
   99           | NWORDBOUNDARY
  100           | STARTSUBJECT
  101           | ENDSUBJECT
  102           | OENDSUBJECT
  103           | FIRSTPOSITION

  104 hex: HEX

  105 newlinespec: newlinespec_unit
  106            | newlinespec_unit newlinespec

  107 newlinespec_unit: OPT_CR
  108                 | OPT_LF
  109                 | OPT_CRLF
  110                 | OPT_ANYCRLF
  111                 | OPT_ANY_NEWLINE

  112 capturing: startCapturing rv endCapturing
  113          | capturingNamed capturingName capturingNameEnd rv endCapturing
  114          | capturingNon rv endCapturing
  115          | capturingNonreset rv endCapturing
  116          | capturingAtomic rv endCapturing
  117          | capturingComment rv endCapturing
  118          | capturingPosahead rv endCapturing
  119          | capturingNegahead rv endCapturing
  120          | capturingPosbehind rv endCapturing
  121          | capturingNegbehind rv endCapturing

  122 capturingNamed: CAPTURING_NAMED

  123 capturingName: capturingNameAdd
  124              | capturingNameAdd capturingName

  125 capturingNameAdd: ASCII

  126 capturingNon: CAPTURING_NON

  127 capturingNonreset: CAPTURING_NONRESET

  128 capturingAtomic: CAPTURING_ATOMIC

  129 capturingComment: CAPTURING_COMMENT

  130 capturingPosahead: CAPTURING_POSAHEAD

  131 capturingNegahead: CAPTURING_NEGAHEAD

  132 capturingPosbehind: CAPTURING_POSBEHIND

  133 capturingNegbehind: CAPTURING_NEGBEHIND

  134 capturingNameEnd: CAPTURING_NAMED_END

  135 startCapturing: LPAR

  136 endCapturing: RPAR

  137 repeating: startRepeating interval endRepeating

  138 startRepeating: LBRA

  139 endRepeating: RBRA

  140 interval: minimum intervalDelim maximum
  141         | minimum intervalDelim
  142         | maximum

  143 minimum: INT

  144 maximum: INT

  145 intervalDelim: COMMA

  146 class: classStart inclass classEnd
  147      | slashcharclass
  148      | posix_class

  149 classStart: LBOX

  150 classEnd: RBOX

  151 slashcharclass: DECDIGIT
  152               | NDECDIGIT
  153               | HWHITESPACE
  154               | NHWHITESPACE
  155               | WHITESPACE
  156               | NWHITESPACE
  157               | VWHITESPACE
  158               | NVWHITESPACE
  159               | WORDCHAR
  160               | NWORDCHAR

  161 inclass: inclass_ext_unit
  162        | bol inclass_ext_unit

  163 inclass_ext_unit: inclass_unit
  164                 | inclass_unit inclass_ext_unit

  165 inclass_unit: inclass_element
  166             | rangechars
  167             | chal

  168 inclass_element: ASCII
  169                | posix_class
  170                | slashcharclass
  171                | hex
  172                | TAB
  173                | CR
  174                | LF
  175                | FF
  176                | BEL
  177                | ESC
  178                | CONTROLX
  179                | RESET
  180                | OCTAL
  181                | DASH

  182 rangechars: INT

  183 dash: DASH

  184 posix_class: P_ALNUM
  185            | P_ALPHA
  186            | P_ASCII
  187            | P_BLANK
  188            | P_CNTRL
  189            | P_DIGIT
  190            | P_GRAPH
  191            | P_LOWER
  192            | P_PRINT
  193            | P_PUNCT
  194            | P_SPACE
  195            | P_UPPER
  196            | P_WORD
  197            | P_XDIGIT
  198            | posix_class_neg

  199 posix_class_neg: NP_ALNUM
  200                | NP_ALPHA
  201                | NP_ASCII
  202                | NP_BLANK
  203                | NP_CNTRL
  204                | NP_DIGIT
  205                | NP_GRAPH
  206                | NP_LOWER
  207                | NP_PRINT
  208                | NP_PUNCT
  209                | NP_SPACE
  210                | NP_UPPER
  211                | NP_WORD
  212                | NP_XDIGIT

  213 chal: chalStart inchal chalEnd

  214 chalStart: CHALSTART

  215 chalEnd: CHALEND

  216 inchal: inchalExtUnit
  217       | inchalExtUnit inchal

  218 inchalExtUnit: inchalUnit

  219 inchalUnit: ASCII

  220 backreference: BACKREFERENCE
  221              | named_back_reference

  222 named_back_reference: nbrStart inNbr nbrEnd

  223 nbrStart: NAMED_BACKREFERENCE

  224 nbrEnd: NAMED_BACKREFERENCE_END

  225 inNbr: inNbrUnit
  226      | inNbrUnit inNbr

  227 inNbrUnit: ASCII

  228 subroutine: SUBROUTINE_ALL
  229           | SUBROUTINE_ABSOLUTE
  230           | SUBROUTINE_RELATIVE
  231           | named_subroutine

  232 named_subroutine: nsrStart inNsr nsrEnd

  233 nsrStart: SUBROUTINE_NAME

  234 nsrEnd: SUBROUTINE_NAME_END

  235 inNsr: inNsrUnit
  236      | inNsrUnit inNsr

  237 inNsrUnit: ASCII


Terminals, with rules where they appear

$end (0) 0
error (256)
LBRA (258) 138
RBRA (259) 62 139
INT (260) 143 144 182
COMMA (261) 145
LBOX (262) 149
RBOX (263) 150
SLASH (264) 21
LPAR (265) 135
RPAR (266) 136
ANY (267) 81
ZEROONE (268) 47 51
ONEMORE (269) 48 50
ZEROMORE (270) 46
DASH (271) 181 183
OR (272) 52
ASCII (273) 80 125 168 219 227 237
CHARCLASS2VALUE (274)
EOL (275) 37
BOL (276) 36
SPACE (277) 82
UTF8 (278) 6
UCP (279) 7
MODIF_CASELESS (280) 12 66 74
MODIF_MULTILINE (281) 13 69 77
MODIF_DOTALL (282) 14 67 75
MODIF_EXTENDED (283) 15 68 76
OPTION (284) 61
MODIF_DUPNAMES (285) 70 78
MODIF_UNGREEDY (286) 16 71 79
MODIF_R (287) 17
MODIF_O (288) 18
MODIF_P (289) 19
MODIF_B (290) 20
OPT_CR (291) 107
OPT_LF (292) 108
OPT_CRLF (293) 109
OPT_ANYCRLF (294) 110
OPT_ANY_NEWLINE (295) 111
DECDIGIT (296) 151
NDECDIGIT (297) 152
HWHITESPACE (298) 153
NHWHITESPACE (299) 154
WHITESPACE (300) 155
NWHITESPACE (301) 156
VWHITESPACE (302) 157
NVWHITESPACE (303) 158
WORDCHAR (304) 159
NWORDCHAR (305) 160
P_ALNUM (306) 184
P_ALPHA (307) 185
P_ASCII (308) 186
P_BLANK (309) 187
P_CNTRL (310) 188
P_DIGIT (311) 189
P_GRAPH (312) 190
P_LOWER (313) 191
P_PRINT (314) 192
P_PUNCT (315) 193
P_SPACE (316) 194
P_UPPER (317) 195
P_WORD (318) 196
P_XDIGIT (319) 197
NP_ALNUM (320) 199
NP_ALPHA (321) 200
NP_ASCII (322) 201
NP_BLANK (323) 202
NP_CNTRL (324) 203
NP_DIGIT (325) 204
NP_GRAPH (326) 205
NP_LOWER (327) 206
NP_PRINT (328) 207
NP_PUNCT (329) 208
NP_SPACE (330) 209
NP_UPPER (331) 210
NP_WORD (332) 211
NP_XDIGIT (333) 212
HEX (334) 104
OCTAL (335) 95 180
TAB (336) 84 172
CR (337) 85 173
LF (338) 86 174
FF (339) 87 175
ESC (340) 89 177
BEL (341) 88 176
CONTROLX (342) 90 178
BSR (343) 91
RESET (344) 92 179
ONEBYTE (345) 94
WORDBOUNDARY (346) 98
NWORDBOUNDARY (347) 99
STARTSUBJECT (348) 100
ENDSUBJECT (349) 101
OENDSUBJECT (350) 102
FIRSTPOSITION (351) 103
CAPTURING_NON (352) 126
CAPTURING_NONRESET (353) 127
CAPTURING_ATOMIC (354) 128
CAPTURING_COMMENT (355) 129
CAPTURING_NEGBEHIND (356) 133
CAPTURING_POSBEHIND (357) 132
CAPTURING_NEGAHEAD (358) 131
CAPTURING_POSAHEAD (359) 130
CAPTURING_NAMED (360) 122
CAPTURING_NAMED_END (361) 134
CHALSTART (362) 214
CHALEND (363) 215
BACKREFERENCE (364) 220
NAMED_BACKREFERENCE (365) 223
NAMED_BACKREFERENCE_END (366) 224
SUBROUTINE_ALL (367) 228
SUBROUTINE_NAME (368) 233
SUBROUTINE_NAME_END (369) 234
SUBROUTINE_ABSOLUTE (370) 229
SUBROUTINE_RELATIVE (371) 230


Nonterminals, with rules where they appear

$accept (117)
    on left: 0
pcre (118)
    on left: 1, on right: 0
modif_front (119)
    on left: 2 3, on right: 1
modif_front_ext (120)
    on left: 4 5, on right: 3 5
modif_front_unit (121)
    on left: 6 7, on right: 4 5
modif_rear (122)
    on left: 8 9, on right: 1
modif_rear_ext (123)
    on left: 10 11, on right: 9 11
modif_rear_unit (124)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
pcre_delim (125)
    on left: 21, on right: 2 3 8 9
pattern (126)
    on left: 22 23, on right: 1
inslash (127)
    on left: 24 25 26 27, on right: 22 23
rv (128)
    on left: 28 29 30 31, on right: 24 25 26 27 29 30 31 112 113 114
    115 116 117 118 119 120 121
ext_exp (129)
    on left: 32 33 34 35, on right: 28
bol (130)
    on left: 36, on right: 25 27 33 35 162
eol (131)
    on left: 37, on right: 26 27 34 35
exp (132)
    on left: 38 39, on right: 32 33 34 35 39
ext_unit (133)
    on left: 40 41, on right: 38 39
quantify_unit (134)
    on left: 42, on right: 41
quantify (135)
    on left: 43 44 45, on right: 42
quantifier (136)
    on left: 46 47 48 49, on right: 43 44 45
possessive (137)
    on left: 50, on right: 44
lazy (138)
    on left: 51, on right: 45
or (139)
    on left: 52, on right: 29 30 31
unit (140)
    on left: 53 54 55 56 57, on right: 40 42
option (141)
    on left: 58 59 60, on right: 55
optionStart (142)
    on left: 61, on right: 58 59 60
optionEnd (143)
    on left: 62, on right: 58 59 60
option_unset_group (144)
    on left: 63, on right: 59 60
option_set (145)
    on left: 64 65, on right: 58 60 65
option_set_unit (146)
    on left: 66 67 68 69 70 71, on right: 64 65
option_unset (147)
    on left: 72 73, on right: 63 73
option_unset_unit (148)
    on left: 74 75 76 77 78 79, on right: 72 73
element (149)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97,
    on right: 53
assertions (150)
    on left: 98 99 100 101 102 103, on right: 93
hex (151)
    on left: 104, on right: 83 171
newlinespec (152)
    on left: 105 106, on right: 22 106
newlinespec_unit (153)
    on left: 107 108 109 110 111, on right: 105 106
capturing (154)
    on left: 112 113 114 115 116 117 118 119 120 121, on right: 54
capturingNamed (155)
    on left: 122, on right: 113
capturingName (156)
    on left: 123 124, on right: 113 124
capturingNameAdd (157)
    on left: 125, on right: 123 124
capturingNon (158)
    on left: 126, on right: 114
capturingNonreset (159)
    on left: 127, on right: 115
capturingAtomic (160)
    on left: 128, on right: 116
capturingComment (161)
    on left: 129, on right: 117
capturingPosahead (162)
    on left: 130, on right: 118
capturingNegahead (163)
    on left: 131, on right: 119
capturingPosbehind (164)
    on left: 132, on right: 120
capturingNegbehind (165)
    on left: 133, on right: 121
capturingNameEnd (166)
    on left: 134, on right: 113
startCapturing (167)
    on left: 135, on right: 112
endCapturing (168)
    on left: 136, on right: 112 113 114 115 116 117 118 119 120 121
repeating (169)
    on left: 137, on right: 49
startRepeating (170)
    on left: 138, on right: 137
endRepeating (171)
    on left: 139, on right: 137
interval (172)
    on left: 140 141 142, on right: 137
minimum (173)
    on left: 143, on right: 140 141
maximum (174)
    on left: 144, on right: 140 142
intervalDelim (175)
    on left: 145, on right: 140 141
class (176)
    on left: 146 147 148, on right: 57
classStart (177)
    on left: 149, on right: 146
classEnd (178)
    on left: 150, on right: 146
slashcharclass (179)
    on left: 151 152 153 154 155 156 157 158 159 160, on right: 147
    170
inclass (180)
    on left: 161 162, on right: 146
inclass_ext_unit (181)
    on left: 163 164, on right: 161 162 164
inclass_unit (182)
    on left: 165 166 167, on right: 163 164
inclass_element (183)
    on left: 168 169 170 171 172 173 174 175 176 177 178 179 180 181,
    on right: 165
rangechars (184)
    on left: 182, on right: 166
dash (185)
    on left: 183, on right: 63
posix_class (186)
    on left: 184 185 186 187 188 189 190 191 192 193 194 195 196 197
    198, on right: 148 169
posix_class_neg (187)
    on left: 199 200 201 202 203 204 205 206 207 208 209 210 211 212,
    on right: 198
chal (188)
    on left: 213, on right: 56 167
chalStart (189)
    on left: 214, on right: 213
chalEnd (190)
    on left: 215, on right: 213
inchal (191)
    on left: 216 217, on right: 213 217
inchalExtUnit (192)
    on left: 218, on right: 216 217
inchalUnit (193)
    on left: 219, on right: 218
backreference (194)
    on left: 220 221, on right: 96
named_back_reference (195)
    on left: 222, on right: 221
nbrStart (196)
    on left: 223, on right: 222
nbrEnd (197)
    on left: 224, on right: 222
inNbr (198)
    on left: 225 226, on right: 222 226
inNbrUnit (199)
    on left: 227, on right: 225 226
subroutine (200)
    on left: 228 229 230 231, on right: 97
named_subroutine (201)
    on left: 232, on right: 231
nsrStart (202)
    on left: 233, on right: 232
nsrEnd (203)
    on left: 234, on right: 232
inNsr (204)
    on left: 235 236, on right: 232 236
inNsrUnit (205)
    on left: 237, on right: 235 236


State 0

    0 $accept: . pcre $end
    1 pcre: . modif_front pattern modif_rear
    2 modif_front: . pcre_delim
    3            | . modif_front_ext pcre_delim
    4 modif_front_ext: . modif_front_unit
    5                | . modif_front_unit modif_front_ext
    6 modif_front_unit: . UTF8
    7                 | . UCP
   21 pcre_delim: . SLASH

    SLASH  shift, and go to state 1
    UTF8   shift, and go to state 2
    UCP    shift, and go to state 3

    pcre              go to state 4
    modif_front       go to state 5
    modif_front_ext   go to state 6
    modif_front_unit  go to state 7
    pcre_delim        go to state 8


State 1

   21 pcre_delim: SLASH .

    $default  reduce using rule 21 (pcre_delim)


State 2

    6 modif_front_unit: UTF8 .

    $default  reduce using rule 6 (modif_front_unit)


State 3

    7 modif_front_unit: UCP .

    $default  reduce using rule 7 (modif_front_unit)


State 4

    0 $accept: pcre . $end

    $end  shift, and go to state 9


State 5
